--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -14,6 +14,7 @@ suites:
   - name: default
     run_list:
       - recipe[mule-test::default]
+      - recipe[mule-test::standalone_app]
     attributes:
       aws:
         access_key: <%= ENV['AWS_ACCESS_KEY_ID'] %>
